--- a/ipa_seminar_driver/driver_tutorial/kr16_deployment/package.xml
+++ b/ipa_seminar_driver/driver_tutorial/kr16_deployment/package.xml
@@ -1,6 +1,6 @@
 <package>
-  <name></name>
-  <description>Architecture </description>
+  <name>kr16_deployment</name>
+  <description>Architecture kr16_deployment</description>
   <version>0.0.0</version>
   <maintainer email="TODO@TODO.to">TODO</maintainer>
   <author email="TODO@TODO.to">TODO</author>
@@ -9,6 +9,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>  
 
+    <build_depend>kr16_driver</build_depend>
+    <run_depend>kr16_driver</run_depend>
+    <build_depend>kr16_test_listener</build_depend>
+    <run_depend>kr16_test_listener</run_depend>
  
   
 
